test/bad/class1.pacc
/*
nopacc 5:20 'expected CCNode, "-", or "]"'
*/

Bad :: char * ← [a-a] → { "foo" }
